# smre

./: .gitmodules  CMakeLists.txt  CTestConfig.cmake  Makefile  build.sh  clean.sh
abstract/: smre_dataformat.h  smre_io.h
cmake/: FindAmdFFT.cmake  FindFFTw.cmake  FindFFTwf.cmake  FindMPFR.cmake  FindMatIO.cmake  FindOpenCL.cmake  LibFindMacros.cmake  config.h.in  doxygen.conf.in  mangle_cl.sh
include/: blas.h  blascompat32.h  engine.h  lapack.h  mat.h  matrix.h  mclmcr.h  mclmcrrt.h  mcr.h  mex.h  mwdebug.h  mwservices.h  mwutil.h  tmwtypes.h
src/: CMakeLists.txt  apply_tuple.h  benchmark.cpp  chambolle_pock.cpp  chambolle_pock.h  chambolle_pock_cl.cpp  chambolle_pock_cl.h  chambolle_pock_cpu.cpp  chambolle_pock_cpu.h  chambolle_pock_kernels.cl  constraint_parser.h  convolution.h  convolution_benchmark.cpp  debug_tools.h  gil_io.cpp  gil_io.h  gui.glade  guimain.cpp  image_variance.h  io.cpp  io.h  kernel_generator.h  main.cpp  matlab_io.cpp  matlab_io.h  meta_helpers.h  multi_array.h  multi_array_fft.h  multi_array_io.h  multi_array_iterator.h  multi_array_matrix.h  multi_array_operators.h  multi_array_print.h  multi_array_vector.h  opencl_helpers.cpp  opencl_helpers.h  opencl_multi_array.h  operator_split.h  plain_io.cpp  plain_io.h  (+6 more)
src/mimas/: LICENSE  functions.h  mimasexception.h  multi_array_op.h  multi_array_op_help.h  multi_array_op_help2.h  multi_array_op_help3.h
test/: CMakeLists.txt  convolution.cpp  convolution_error.cpp  multi_array_compare.h  multi_array_iterator.h  test_chambolle_pock.cpp  test_constraint_parser.cpp  test_gil_io.cpp  test_kernel_generator.cpp  test_mat.cpp  test_matlab_io.cpp  test_multi_array_fft.cpp  test_multi_array_matrix.cpp  test_multi_array_operators.cpp  test_multi_array_print.cpp  test_multi_array_vector.cpp  test_opencl.cl  test_opencl.cpp  test_opencl_add.cl  test_opencl_fft.cpp  test_opencl_multi_array.cl  test_opencl_multi_array.cpp  test_operator_split.cpp  test_plain_io.cpp  test_resolvent.cpp  test_resolvent_parser.cpp  test_smre_data_double.cpp  test_smre_data_double.h  test_tuple_cut.cpp
